--- a/iesrtutorial.html
+++ b/iesrtutorial.html
@@ -110,7 +110,7 @@ $(document).ready(function () {
 
 <h1 class="title">IES R Tutorial</h1>
 <h4 class="author"><em>Michael Chirico</em></h4>
-<h4 class="date"><em>Compiled April 30, 2016 at 15:15</em></h4>
+<h4 class="date"><em>Compiled April 30, 2016 at 19:19</em></h4>
 
 </div>
 
@@ -161,6 +161,7 @@ $(document).ready(function () {
 <li><a href="#merging"><span class="toc-section-number">3.2</span> Merging</a><ul>
 <li><a href="#adding-a-column-to-a-data.table"><span class="toc-section-number">3.2.1</span> <code>:=</code> - Adding a column to a <code>data.table</code></a></li>
 <li><a href="#merge-and-update"><span class="toc-section-number">3.2.2</span> Merge and update</a></li>
+<li><a href="#missing-data"><span class="toc-section-number">3.2.3</span> Missing Data</a></li>
 </ul></li>
 <li><a href="#regressions"><span class="toc-section-number">3.3</span> Regressions</a><ul>
 <li><a href="#ols-lm-predictcoeftestsummary"><span class="toc-section-number">3.3.1</span> OLS (<code>lm</code>) / <code>predict</code>/<code>coeftest</code>/<code>summary</code></a></li>
@@ -686,20 +687,20 @@ paste(first, last)</code></pre>
 <p>The most common kind of random numbers that people want are uniform draws and normal draws.</p>
 <pre class="r"><code>#generate 10 U[0, 1] draws
 runif(10)</code></pre>
-<pre><code>##  [1] 0.93206148 0.27399248 0.64524455 0.59236746 0.20114165 0.84824124
-##  [7] 0.09910169 0.78685851 0.74470867 0.46583739</code></pre>
+<pre><code>##  [1] 0.44044260 0.78458594 0.01268175 0.82108162 0.25894916 0.75218612
+##  [7] 0.33798529 0.23404177 0.83829024 0.56368019</code></pre>
 <pre class="r"><code>#generate 10 U[3, 5] draws
 runif(10, min = 3, max = 5)</code></pre>
-<pre><code>##  [1] 3.875893 3.062618 3.480862 3.710756 3.191807 3.362733 3.370285
-##  [8] 3.429946 4.501463 3.352343</code></pre>
+<pre><code>##  [1] 4.168247 4.625197 3.243703 3.381987 3.462236 4.189317 3.010287
+##  [8] 3.207064 3.302874 4.154266</code></pre>
 <pre class="r"><code>#generate 10 N(0, 1) draws
 rnorm(10)</code></pre>
-<pre><code>##  [1]  0.869284534 -0.008346087 -0.384470389 -0.050715176 -0.661193282
-##  [6]  0.727011953 -0.594515271 -1.918735453 -1.664992909 -0.515779742</code></pre>
+<pre><code>##  [1]  0.8024428 -0.1175511 -0.9745676  0.5098124 -1.1486802 -1.8265395
+##  [7]  1.0000246 -0.8386195  0.8716707  1.8092451</code></pre>
 <pre class="r"><code>#generate 10 N(3, 5) draws
 rnorm(10, mean = 3, sd = 5)</code></pre>
-<pre><code>##  [1]  2.1140326  0.3946692  5.4921924  4.1181548  6.1266781  6.1695683
-##  [7]  5.7619482  0.4012316  3.8183739 -5.8102023</code></pre>
+<pre><code>##  [1] -4.834577  3.550992 -8.444009  7.858619  6.337397  3.154061  1.603901
+##  [8]  3.029364 -3.951819 -2.169802</code></pre>
 <p>These examples highlight the common format of random number generators in R. To get random numbers from a distribution, there is probably a function named like <code>r</code><strong><code>dist</code></strong>, where <strong><code>dist</code></strong> is an abbreviation for the distribution (here, <strong>unif</strong>orm and <strong>norm</strong>al). The first argument is the number of draws; the rest of the arguments are parameters.</p>
 <p>Here is a complete table of all of the common distributions built in to R, and the function used to invoke their random number generator (RNG):</p>
 <table>
@@ -851,13 +852,13 @@ qnorm(c(.005, .025, .05))</code></pre>
 <p>As always, it’s easiest to see with some examples:</p>
 <pre class="r"><code>#A permutation of 1:5
 sample(5)</code></pre>
-<pre><code>## [1] 4 3 5 2 1</code></pre>
+<pre><code>## [1] 2 5 3 4 1</code></pre>
 <pre class="r"><code>#A size-3 subset of 1:5
 sample(5, 3)</code></pre>
-<pre><code>## [1] 1 4 5</code></pre>
+<pre><code>## [1] 5 3 2</code></pre>
 <pre class="r"><code>#A size-5 subset of 1:5, with replacement
 sample(5, 5, replace = TRUE)</code></pre>
-<pre><code>## [1] 2 5 5 3 4</code></pre>
+<pre><code>## [1] 2 3 3 2 4</code></pre>
 <pre class="r"><code>#A weighted sample of 1:5, heavily weighting 1
 sample(5, 5, replace = TRUE, prob = c(.99, .0025, .0025, .0025, .0025))</code></pre>
 <pre><code>## [1] 1 1 1 1 1</code></pre>
@@ -865,10 +866,10 @@ sample(5, 5, replace = TRUE, prob = c(.99, .0025, .0025, .0025, .0025))</code></
 <pre class="r"><code>#Flip 10 coins, get the percentage heads
 flips &lt;- sample(c(&quot;H&quot;, &quot;T&quot;), 10, replace = TRUE)
 mean(flips == &quot;H&quot;)</code></pre>
-<pre><code>## [1] 0.4</code></pre>
+<pre><code>## [1] 0.5</code></pre>
 <pre class="r"><code>#Roll a pair of dice and add them
 sum(sample(6, 2, replace = TRUE))</code></pre>
-<pre><code>## [1] 8</code></pre>
+<pre><code>## [1] 6</code></pre>
 <pre class="r"><code>#create a deck of labeled cards:
 #  (I copy-pasted the text for the suits from
 #   Wikipedia, but we could have used S/H/D/C:
@@ -883,7 +884,7 @@ deck</code></pre>
 ## [45] &quot;7♣&quot;  &quot;8♣&quot;  &quot;9♣&quot;  &quot;10♣&quot; &quot;J♣&quot;  &quot;Q♣&quot;  &quot;K♣&quot;  &quot;A♣&quot;</code></pre>
 <pre class="r"><code>#Now draw a poker hand
 sample(deck, 5)</code></pre>
-<pre><code>## [1] &quot;5♠&quot; &quot;2♥&quot; &quot;9♣&quot; &quot;5♦&quot; &quot;2♦&quot;</code></pre>
+<pre><code>## [1] &quot;4♥&quot; &quot;8♠&quot; &quot;J♠&quot; &quot;6♦&quot; &quot;A♠&quot;</code></pre>
 </div>
 <div id="replicate" class="section level3">
 <h3><span class="header-section-number">2.6.3</span> <code>replicate</code></h3>
@@ -902,7 +903,7 @@ simulations &lt;-
 #How often does a flush happen?
 #  True frequency is 0.1965%
 mean(simulations)</code></pre>
-<pre><code>## [1] 0.0015</code></pre>
+<pre><code>## [1] 0.002</code></pre>
 <pre class="r"><code>#What about a pair (just two cards match)?
 #  true frequency: 42%
 simulations &lt;- 
@@ -912,7 +913,7 @@ simulations &lt;-
     sum(duplicated(faces)) == 1 #one pair if there's exactly _one_ match
   })
 mean(simulations)</code></pre>
-<pre><code>## [1] 0.4207</code></pre>
+<pre><code>## [1] 0.4248</code></pre>
 </div>
 <div id="set.seed" class="section level3">
 <h3><span class="header-section-number">2.6.4</span> <code>set.seed</code></h3>
@@ -1081,14 +1082,14 @@ x &lt;- rnorm(1000)
 r &lt;- lm(y ~ x)
 str(r)</code></pre>
 <pre><code>## List of 12
-##  $ coefficients : Named num [1:2] 0.0356 0.0608
+##  $ coefficients : Named num [1:2] -0.0319 -0.0072
 ##   ..- attr(*, &quot;names&quot;)= chr [1:2] &quot;(Intercept)&quot; &quot;x&quot;
-##  $ residuals    : Named num [1:1000] -0.653 -0.668 -0.259 -0.2 0.847 ...
+##  $ residuals    : Named num [1:1000] -0.125 0.436 0.998 -0.257 0.528 ...
 ##   ..- attr(*, &quot;names&quot;)= chr [1:1000] &quot;1&quot; &quot;2&quot; &quot;3&quot; &quot;4&quot; ...
-##  $ effects      : Named num [1:1000] -1.155 -1.915 -0.223 -0.211 0.839 ...
+##  $ effects      : Named num [1:1000] 1.006 -0.218 1.003 -0.251 0.551 ...
 ##   ..- attr(*, &quot;names&quot;)= chr [1:1000] &quot;(Intercept)&quot; &quot;x&quot; &quot;&quot; &quot;&quot; ...
 ##  $ rank         : int 2
-##  $ fitted.values: Named num [1:1000] 0.0977 0.0664 0.0889 -0.056 -0.0469 ...
+##  $ fitted.values: Named num [1:1000] -0.0265 -0.0245 -0.0326 -0.0328 -0.0412 ...
 ##   ..- attr(*, &quot;names&quot;)= chr [1:1000] &quot;1&quot; &quot;2&quot; &quot;3&quot; &quot;4&quot; ...
 ##  $ assign       : int [1:2] 0 1
 ##  $ qr           :List of 5
@@ -1097,7 +1098,7 @@ str(r)</code></pre>
 ##   .. .. ..$ : chr [1:1000] &quot;1&quot; &quot;2&quot; &quot;3&quot; &quot;4&quot; ...
 ##   .. .. ..$ : chr [1:2] &quot;(Intercept)&quot; &quot;x&quot;
 ##   .. ..- attr(*, &quot;assign&quot;)= int [1:2] 0 1
-##   ..$ qraux: num [1:2] 1.03 1.01
+##   ..$ qraux: num [1:2] 1.03 1.03
 ##   ..$ pivot: int [1:2] 1 2
 ##   ..$ tol  : num 1e-07
 ##   ..$ rank : int 2
@@ -1120,8 +1121,8 @@ str(r)</code></pre>
 ##   .. ..- attr(*, &quot;dataClasses&quot;)= Named chr [1:2] &quot;numeric&quot; &quot;numeric&quot;
 ##   .. .. ..- attr(*, &quot;names&quot;)= chr [1:2] &quot;y&quot; &quot;x&quot;
 ##  $ model        :'data.frame':   1000 obs. of  2 variables:
-##   ..$ y: num [1:1000] -0.556 -0.602 -0.171 -0.256 0.8 ...
-##   ..$ x: num [1:1000] 1.023 0.508 0.877 -1.507 -1.359 ...
+##   ..$ y: num [1:1000] -0.152 0.411 0.965 -0.29 0.487 ...
+##   ..$ x: num [1:1000] -0.7466 -1.0277 0.0947 0.1213 1.2852 ...
 ##   ..- attr(*, &quot;terms&quot;)=Classes 'terms', 'formula' length 3 y ~ x
 ##   .. .. ..- attr(*, &quot;variables&quot;)= language list(y, x)
 ##   .. .. ..- attr(*, &quot;factors&quot;)= int [1:2, 1] 0 1
@@ -1148,9 +1149,7 @@ str(r)</code></pre>
 </div>
 <div id="data-basics-9-am---11-am" class="section level1">
 <h1><span class="header-section-number">3</span> Data Basics (9 AM - 11 AM)</h1>
-<ul>
-<li>Missing Data</li>
-</ul>
+<p>This section is intended to lay the groundwork of all of the most common data analysis tasks we face when tackling our empirical problems.</p>
 <div id="reading-.csv-files" class="section level2">
 <h2><span class="header-section-number">3.1</span> Reading .csv Files</h2>
 <p>The most common format of file you’re like to find in the real world is in .csv (comma-separated value) format.</p>
@@ -2179,6 +2178,152 @@ attendance[teachers,
 ## 210: RANDOLPH TECHNICAL HIGH SCHOOL
 ## 211:      ROBESON, PAUL HIGH SCHOOL
 ## 212:          HESTON, EDWARD SCHOOL</code></pre>
+<p>It’s up to your taste which approach suits you – each is perfect for a certain situation.</p>
+</div>
+<div id="missing-data" class="section level3">
+<h3><span class="header-section-number">3.2.3</span> Missing Data</h3>
+<p>No data set is perfect. In fact, most data sets are nightmares. Missing data is pervasive, so it stands to reason that R is well-equipped to handle missing data.</p>
+<p>All missing data is coded in R as <code>NA</code>. That is, if we’ve been careful when loading the data into R, usually by telling R what missing data looks like in a given file. Take <code>fread</code>, for example. We haven’t needed it yet because the two data sets we’ve loaded have been complete/balanced, but <code>fread</code> has an argument called <code>na.strings</code> which is used to tell R what to look for in a data file to consider as missing (i.e., as <code>NA</code>).</p>
+<p>We now have some missing data after our merge, however. To see this, note the following:</p>
+<pre class="r"><code>#is.na returns a logical vector saying
+#  whether each element of school_name
+#  is missing (NA) or not
+attendance[is.na(school_name)]</code></pre>
+<pre><code>##    ULCS_NO SCHOOL_YEAR SCH_TEACHER_ATTEND SDP_TEACHER_ATTEND SCHOOL_ID
+## 1:    2140   2013-2014               95.7               93.4       214
+##    attendance_proportion attendance_relative school_name
+## 1:                 0.957            1.024625          NA</code></pre>
+<pre class="r"><code>#NOTE: TESTING NA WITH EQUALITY DOESN'T WORK
+attendance[school_name == NA]</code></pre>
+<pre><code>## Empty data.table (0 rows) of 8 cols: ULCS_NO,SCHOOL_YEAR,SCH_TEACHER_ATTEND,SDP_TEACHER_ATTEND,SCHOOL_ID,attendance_proportion...</code></pre>
+<p>So what’s up with <code>ULCS_NO</code> <code>2140</code>? Why does this school have no teachers in the salary data??</p>
+<p>Turns out, it <em>is</em> in the salary data, but none of the teachers are listed as <code>TEACHER,FULL TIME</code>:</p>
+<pre class="r"><code>#remember, salaries is the full set
+#  of ALL employees of SDP -- we
+#  didn't remove any observations from here
+#(using the nrows argument for print to condense output)
+print(salaries[home_organization == &quot;2140&quot;], nrows = 10)</code></pre>
+<pre><code>##        last_name  first_name pay_rate_type pay_rate
+##  1:        ABNEY       GILDA      SALARIED    79586
+##  2:       AIKENS       SARAH      SALARIED    48110
+##  3:         AKES      RONALD      SALARIED    17963
+##  4: AMIT-CUBBAGE       DONNA      SALARIED    84880
+##  5:       BALLEW       MEGAN      SALARIED    52530
+## ---                                                
+## 79:      TARANTA CHRISTOPHER      SALARIED    84880
+## 80:       TAYLOR   ELIZABETH      SALARIED    84880
+## 81:        VECSI       JANEL      SALARIED    77961
+## 82: VOLIN AVELIN   ALEXANDRA      SALARIED    77961
+## 83:     WILLIAMS      LESLIE      SALARIED    34164
+##               title_description home_organization
+##  1: SCHOOL COUNSELOR, 10 MONTHS              2140
+##  2:        FOOD SVCS MANAGER II              2140
+##  3:         FOOD SVCS WORKER II              2140
+##  4:       TEACHER,DEMONSTRATION              2140
+##  5:       TEACHER,DEMONSTRATION              2140
+## ---                                              
+## 79:       TEACHER,DEMONSTRATION              2140
+## 80:       TEACHER,DEMONSTRATION              2140
+## 81:       TEACHER,DEMONSTRATION              2140
+## 82:       TEACHER,DEMONSTRATION              2140
+## 83:         CUSTODIAL ASSISTANT              2140
+##      home_organization_description organization_level
+##  1: MASTERMAN,JULIA R. HIGH SCHOOL        HIGH SCHOOL
+##  2: MASTERMAN,JULIA R. HIGH SCHOOL        HIGH SCHOOL
+##  3: MASTERMAN,JULIA R. HIGH SCHOOL        HIGH SCHOOL
+##  4: MASTERMAN,JULIA R. HIGH SCHOOL        HIGH SCHOOL
+##  5: MASTERMAN,JULIA R. HIGH SCHOOL        HIGH SCHOOL
+## ---                                                  
+## 79: MASTERMAN,JULIA R. HIGH SCHOOL        HIGH SCHOOL
+## 80: MASTERMAN,JULIA R. HIGH SCHOOL        HIGH SCHOOL
+## 81: MASTERMAN,JULIA R. HIGH SCHOOL        HIGH SCHOOL
+## 82: MASTERMAN,JULIA R. HIGH SCHOOL        HIGH SCHOOL
+## 83: MASTERMAN,JULIA R. HIGH SCHOOL        HIGH SCHOOL
+##     type_of_representation gender run_date
+##  1:            PFT-TEACHER      F 4/1/2016
+##  2:            PFT-F/S MGR      F 4/1/2016
+##  3:              LOCAL 634      M 4/1/2016
+##  4:            PFT-TEACHER      F 4/1/2016
+##  5:            PFT-TEACHER      F 4/1/2016
+## ---                                       
+## 79:            PFT-TEACHER      M 4/1/2016
+## 80:            PFT-TEACHER      F 4/1/2016
+## 81:            PFT-TEACHER      F 4/1/2016
+## 82:            PFT-TEACHER      F 4/1/2016
+## 83:             LOCAL 1201      F 4/1/2016</code></pre>
+<pre class="r"><code>#since they're not full-time teachers, what are they?
+salaries[home_organization == &quot;2140&quot;,
+         table(title_description)]</code></pre>
+<pre><code>## title_description
+##                ASST PRINCIPAL   BUILDING ENGINEER-GROUP III 
+##                             1                             1 
+##           CUSTODIAL ASSISTANT           FOOD SVCS ASSISTANT 
+##                             2                             2 
+##          FOOD SVCS MANAGER II      FOOD SVCS UTILITY WORKER 
+##                             1                             1 
+##            FOOD SVCS WORKER I           FOOD SVCS WORKER II 
+##                             1                             1 
+##      GENERAL CLEANER, 8 HOURS   ONE TO ONE ASST, SPECIAL ED 
+##                             3                             1 
+##                     PRINCIPAL   SCHOOL COUNSELOR, 10 MONTHS 
+##                             1                             3 
+##                  SCHOOL NURSE     SCHOOL OPERATIONS OFFICER 
+##                             1                             1 
+##                   SECRETARY I STUDENT CLIMATE STAFF,3 HOURS 
+##                             3                             2 
+## STUDENT CLIMATE STAFF,4 HOURS         TEACHER,DEMONSTRATION 
+##                             3                            54 
+## TEACHER,DEMONSTRATION,SPEC ED 
+##                             1</code></pre>
+<p>That’s right – at Masterman, none of the teachers appear to be classified as such. They’re classified for wage purposes as <code>TEACHER,DEMONSTRATION</code>. I don’t really know what this means… I was only able to find a <a href="http://webgui.phila.k12.pa.us/offices/e/ee/opportunitites/demonstration-teachers/demonstration-teachers-positions/demonstration-teacher-of-elementary-education">small tidbit on the SDP website</a>:</p>
+<blockquote>
+<p>Demonstration Teachers are unique educators. They utilize the most current educational techniques and instructional media, which contribute to effective teaching practices in their specific teaching areas. They are observed at times by personnel from within the School District as well as visitors from other areas and institutions, both national and international.</p>
+</blockquote>
+<p>This appears to be something basically exclusive to Masterman, with a fair presence at John Hancock as well:</p>
+<pre class="r"><code>salaries[title_description == &quot;TEACHER,DEMONSTRATION&quot;,
+         .N, by = home_organization_description]</code></pre>
+<pre><code>##     home_organization_description  N
+## 1:           HANCOCK, JOHN SCHOOL 22
+## 2:        PENN TREATY HIGH SCHOOL  1
+## 3: MASTERMAN,JULIA R. HIGH SCHOOL 54
+## 4:        HOWE, JULIA WARD SCHOOL  1
+## 5:          FRANKFORD HIGH SCHOOL  1
+## 6: LABRUM,GEN HARRY MIDDLE SCHOOL  3
+## 7: MASTBAUM, JULES E. HIGH SCHOOL  1</code></pre>
+<p>So, it turns out we’d be better off just using <code>salaries</code> for the merge to define the school’s name:</p>
+<pre class="r"><code>attendance[salaries, 
+           school_name := unique(home_organization_description),
+           on = c(ULCS_NO = &quot;home_organization&quot;), by = .EACHI]
+attendance[is.na(school_name)] #fixed!</code></pre>
+<pre><code>## Empty data.table (0 rows) of 8 cols: ULCS_NO,SCHOOL_YEAR,SCH_TEACHER_ATTEND,SDP_TEACHER_ATTEND,SCHOOL_ID,attendance_proportion...</code></pre>
+<p>Now we can repeat our earlier exercise and reveal the names of the best- and worst- attended schools in Philly. While we’re at it, we can introduce column subsetting. To focus attention on only a few columns, we can simply put them in <code>j</code> and wrap them in <code>.()</code>. Only the columns we name here will show up in the output (so that it doesn’t take up as much room and we can immediately focus on the most important information)</p>
+<pre class="r"><code>attendance[SCH_TEACHER_ATTEND &lt; 90 | 
+             SCH_TEACHER_ATTEND &gt; 97
+           ][order(-SCH_TEACHER_ATTEND), 
+             .(ULCS_NO, school_name, SCH_TEACHER_ATTEND)]</code></pre>
+<pre><code>##     ULCS_NO                    school_name SCH_TEACHER_ATTEND
+##  1:    1190         MOTIVATION HIGH SCHOOL               98.1
+##  2:    6040    SAUL, WALTER B. HIGH SCHOOL               97.6
+##  3:    8560            THE WORKSHOP SCHOOL               97.6
+##  4:    5340        LUDLOW, JAMES R. SCHOOL               97.2
+##  5:    7350        LOWELL, JAMES R. SCHOOL               89.9
+##  6:    7510    BETHUNE, MARY MCLEOD SCHOOL               89.8
+##  7:    8240       DISSTON, HAMILTON SCHOOL               89.7
+##  8:    7290       STEARNE, ALLEN M. SCHOOL               89.7
+##  9:    5430          AMY 5 AT JAMES MARTIN               89.6
+## 10:    7220       CARNELL, LAURA H. SCHOOL               89.0
+## 11:    6360    ROOSEVELT ELEMENTARY SCHOOL               89.0
+## 12:    1330         HUEY, SAMUEL B. SCHOOL               88.8
+## 13:    4240 CASSIDY,LEWIS C ACADEMICS PLUS               88.7
+## 14:    1130           TILDEN MIDDLE SCHOOL               88.5
+## 15:    1340                  LEA, HENRY C.               88.4
+## 16:    6260       HOUSTON, HENRY H. SCHOOL               88.0
+## 17:    2480      ARTHUR, CHESTER A. SCHOOL               87.8
+## 18:    6340     PENNELL, JOSEPH ELEMENTARY               86.9
+## 19:    5370            MOFFET, JOHN SCHOOL               86.5
+## 20:    4570   MEADE, GEN. GEORGE G. SCHOOL               86.4
+## 21:    4350       RHODES ELEMENTARY SCHOOL               85.3
+##     ULCS_NO                    school_name SCH_TEACHER_ATTEND</code></pre>
 </div>
 </div>
 <div id="regressions" class="section level2">
